# esri_mcp

./: .gitignore  README.md  gen_cert.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/esri_mcp/: auth.py  config.py  feature_service.py  server.py
