[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esri-mcp"
version = "0.1.0"
description = "MCP server for ArcGIS Feature Services"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.scripts]
esri-mcp = "esri_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/esri_mcp"]
